完成所有模块的合并