@@ -41,7 +41,6 @@
     <license>
       <name>Apache 2.0 License</name>
       <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-      <distribution>repo</distribution>
     </license>
   </licenses>
   <developers>
@@ -119,6 +118,8 @@
     <guava.version>30.0-jre</guava.version>
     <netty.version>4.1.100.Final</netty.version>
 
+    <!-- This is the same as the kubernetes-client version referenced in spark3.2.1 -->
+    <kubernetes-client.version>5.4.1</kubernetes-client.version>
     <!-- json -->
     <gson.version>2.8.9</gson.version>
     <jackson-bom.version>2.13.4.20221013</jackson-bom.version>
@@ -162,9 +163,9 @@
 
     <!-- test -->
     <junit5.version>5.7.2</junit5.version>
-    <mockito.version>3.9.0</mockito.version>
+    <mockito-bom.version>4.3.1</mockito-bom.version>
     <assertj.version>3.17.2</assertj.version>
-    <h2.version>1.4.200</h2.version>
+    <h2.version>2.2.220</h2.version>
 
     <!-- spring -->
     <spring-framework.version>5.3.34</spring-framework.version>
@@ -172,6 +173,8 @@
     <spring.boot.version>2.7.11</spring.boot.version>
     <spring-netflix.version>3.1.7</spring-netflix.version>
     <spring-cloud.version>2021.0.8</spring-cloud.version>
+    <spring-cloud-alibaba.version>2021.0.6.0</spring-cloud-alibaba.version>
+    <spring-cloud-common.version>3.1.7</spring-cloud-common.version>
 
     <!-- platform encoding override -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -201,15 +204,35 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+    <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
+    <maven-helper-plugin.version>3.2.0</maven-helper-plugin.version>
     <scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
     <spotless-maven-plugin.version>2.24.1</spotless-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
     <jacoco.skip>false</jacoco.skip>
+
+    <!-- for JDK-17 test-->
+    <extraJavaTestArgs>-XX:+IgnoreUnrecognizedVMOptions
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+      --add-opens=java.base/sun.security.action=ALL-UNNAMED
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+      -Djdk.reflect.useDirectMethodHandle=false</extraJavaTestArgs>
 
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <!-- linkis -->
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-module</artifactId>
@@ -225,13 +248,11 @@
           </exclusion>
         </exclusions>
       </dependency>
-
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-common</artifactId>
         <version>${project.version}</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-mybatis</artifactId>
